--- a/js01/index.html
+++ b/js01/index.html
@@ -5,6 +5,8 @@
 	<title>js练习01-Drem Kit</title>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
+
+
 <body>
 	<div class="keys">
 		<div data-key="65" class="key">
@@ -55,27 +57,27 @@
 	<audio data-key="75" src="sounds/tom.wav"></audio>
 	<audio data-key="76" src="sounds/tink.wav"></audio>
 
-<script>
-  function removeTransition(e) {
-	if (e.propertyName !== 'transform') return;
-	e.target.classList.remove('playing');
-  }
+<script type="text/javascript">
+	function removeTransition(e) {
+		if (e.propertyName !== 'transform') return;
+		e.target.classList.remove('playing');
+	}
+	function playSound(e) {
+		const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+		const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+		if(!audio) return; //stop the function from running all together
+		audio.currentTime = 0; //restart
+		key.classList.add('playing'); //js增加class（add remove toggle）
+		audio.play();
+		/*setTimeout(function(){
+			key.classList.remove("playing");
+		},0.07);*/
+	}
+	const keys = Array.from(document.querySelectorAll('.key'));
+	keys.forEach(keys => keys.addEventListener('transitionend', removeTransition));
+	window.addEventListener("keydown",playSound);
 
-  function playSound(e) {
-	const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-	const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
-	if (!audio) return;
-
-	key.classList.add('playing');
-	audio.currentTime = 0;
-	audio.play();
-  }
-
-  const keys = Array.from(document.querySelectorAll('.key'));
-  keys.forEach(keys => keys.addEventListener('transitionend', removeTransition));
-  window.addEventListener('keydown', playSound);
 </script>
-
 
 </body>
 </html>
